style(theme): #77 fixed dropdown caret color in dark mode

--- a/sass/components/forms/_select.scss
+++ b/sass/components/forms/_select.scss
@@ -84,7 +84,7 @@ select {
     bottom: 0;
     margin: auto 0;
     z-index: 0;
-    fill: rgba(0,0,0,.87);
+    fill: $select-input-color;
   }
 
   & + label {
